# translators-copilot

./: .gitignore  README.md  next.config.js  package-lock.json  package.json  project_settings.json  pyproject.toml  requirements.txt
api/: README.md  backend.py  index.py  logger_config.py  utils.py
app/: config.ts
app/alignments/: page.tsx
app/api/chat/: route.ts
app/api/completion/: route.ts
app/database/: page.tsx
app/demo/: page.tsx
app/demov2/: page.tsx
app/translate/: page.tsx
components/: AlignmentTable.tsx  Chat.tsx  ChatMessage.tsx  CollapsibleSection.tsx  DemoForm.tsx  FewShotPrompt.tsx  LanguageDropdown.tsx  PromptCompletion.tsx  PromptGenerator.tsx  SimilarVersesTable.tsx  SourceVerse.tsx
components/ui/: command.tsx
data/alignments/: spapddpt_split.jsonl  test_spanish.jsonl
data/preprocessed-macula-dataframes/: verse_df.csv
hooks/: UseDatabaseInfo.ts  UseQuery.ts  UseSimilarVerses.ts  UseTargetTokens.ts  UseVerse.ts
lib/: types.ts  utils.ts
notebooks/: 01_dynamic_posalign_two_step_spanish.ipynb  add_marble_ids_to_macula_ids.ipynb  align_with_pseudo_english.py  create-combined-macula-df.ipynb  find-ranges-for-alignments.py  guidance_french.ipynb  instruct_align.py  run_align.py  split_json_data.py
scripts/: find-ranges-for-alignments.py
scripts/find-ranges-for-alignments/: find-ranges-for-alignments.py
scripts/find-ranges-for-alignments/tests/: expected_output.jsonl  sample_ingestion_file.jsonl  test_script.py  (+1 more)
src/: types.ts
src/components/: DatabaseTable.tsx  FewShotPrompt.tsx  PromptCompletion.tsx  index.js
