[tool.poetry]
name = "process-ranges"
version = "0.1.0"
description = ""
authors = ["Ben Scholtens <ben.scholtens.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
regex = "^2022.10.31"
tqdm = "^4.65.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.1.0"
ipython = "^8.11.0"
ipdb = "^0.13.11"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
